<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cookie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="40dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/points_confirm"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp16w"
        android:orientation="horizontal">



    <TextView
        android:id="@+id/btn_no"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/points_no"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible" />

        <TextView
            android:id="@+id/btn_action"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="6dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/points_confirm_title"
            android:gravity="center"
            android:textColor="@color/colorGold"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>