<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="userObject"
            type="com.rabe7.community.model.entity.auth.User" />

        <variable
            name="pointsListener"
            type="com.rabe7.community.ui.main.points.PointsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/abl_coins_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageButton
                        android:id="@+id/cancelBtn"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_close_white"
                        android:onClick="@{()-> pointsListener.onCloseClicked()}"
                        android:tint="@android:color/white" />

                    <TextView
                        android:id="@+id/nameToolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/dp16w"
                        android:gravity="center"
                        android:text="@string/label_profile_points_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@android:color/white" />

                </RelativeLayout>


            </com.google.android.material.appbar.AppBarLayout>


            <androidx.core.widget.NestedScrollView
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp16w"
                        android:gravity="center"
                        android:text="@string/points_amount_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:text="@{String.format(@string/points_amount_title, userObject.pointBalance)}" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp100h"
                        android:layout_marginTop="@dimen/dp16w"
                        android:layout_marginStart="@dimen/dp8w"
                        android:layout_marginEnd="@dimen/dp8w"
                        android:layout_marginBottom="@dimen/dp16w"
                        card_view:elevation="@dimen/dp4w"
                        app:cardCornerRadius="@dimen/dp8w">

                    <EditText
                        android:id="@+id/et_points_to_cash"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:background="@android:color/transparent"
                        android:textColor="@color/colorGold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:hint="@string/points_amount"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColorHint="@color/colorHint"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/dp150w"
                        android:layout_height="@dimen/dp50h"
                        android:layout_gravity="center"
                        android:onClick="@{()-> pointsListener.onRedeemClick(etPointsToCash,userObject.pointBalance)}"
                        android:layout_margin="@dimen/dp8w"
                        card_view:elevation="@dimen/dp4w"
                        app:cardCornerRadius="@dimen/dp8w">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/colorWhite"
                            android:text="@string/points_redeem"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>