<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="traderObject"
            type="com.rabe7.community.model.request.trader.TraderExchangeRequest" />

        <variable
            name="traderListener"
            type="com.rabe7.community.ui.main.trader_manager.TraderManagerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_trader_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100h"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp8w"
            android:layout_marginBottom="@dimen/dp16w"
            app:cardCornerRadius="@dimen/dp8w"
            card_view:elevation="@dimen/dp4w">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8w"
                app:error="@{traderObject.traderExchangeErrors.priceError}"
                app:errorEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/trader_price"
                android:inputType="number"
                android:text="@={traderObject.stringPrice}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorGold"
                android:textColorHint="@color/colorHint" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_trader_paid_amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100h"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp8w"
            android:layout_marginBottom="@dimen/dp16w"
            app:cardCornerRadius="@dimen/dp8w"
            card_view:elevation="@dimen/dp4w">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8w"
                app:error="@{traderObject.traderExchangeErrors.paidAmountError}"
                app:errorEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/trader_paid_amount"
                android:inputType="number"
                android:text="@={traderObject.stringPaidAmount}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorGold"
                android:textColorHint="@color/colorHint" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_trader_member_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp100h"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp16w"
            android:layout_marginEnd="@dimen/dp8w"
            android:layout_marginBottom="@dimen/dp16w"
            app:cardCornerRadius="@dimen/dp8w"
            card_view:elevation="@dimen/dp4w">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp8w"
                app:error="@{traderObject.traderExchangeErrors.memberCodeError}"
                app:errorEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/trader_member_code"
                android:inputType="number"
                android:text="@={traderObject.memberCode}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorGold"
                android:textColorHint="@color/colorHint" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_trader_redeem"
            android:layout_width="@dimen/dp150w"
            android:layout_height="@dimen/dp50h"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp8w"
            android:onClick="@{()-> traderListener.onTraderRedeemClicked(traderObject)}"
            card_view:elevation="@dimen/dp4w"
            app:cardCornerRadius="@dimen/dp8w">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:text="@string/points_redeem"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</layout>